--- a/css/main.css
+++ b/css/main.css
@@ -531,58 +531,58 @@ footer {
     font-size: 20px; }
 
 /*------NISSAN------*/
-#fiat {
-  grid-area: fiat;
-  grid-template-areas: 'titFiat titFiat titFiat' 'fiat1 fiat2 fiat3';
+#nissan {
+  grid-area: nissan;
+  grid-template-areas: 'titNiss titNiss titNiss' 'niss1 niss2 niss3';
   grid-column-gap: 20px; }
-  #fiat #fiat1 {
-    grid-area: fiat1; }
-    #fiat #fiat1:hover #fiatDatos1 {
+  #nissan #niss1 {
+    grid-area: niss1; }
+    #nissan #niss1:hover #nissDatos1 {
       display: grid;
       grid-template-rows: repeat(4, 1fr) 2fr;
-      grid-template-areas: "fiatModelo1" "fiatPrecio1" "fiatToTerr1" "fiatEnergia1" "fiatDesc1"; }
-      #fiat #fiat1:hover #fiatDatos1 div {
+      grid-template-areas: "nissModelo1" "nissPrecio1" "nissToTerr1" "nissEnergia1" "nissDesc1"; }
+      #nissan #niss1:hover #nissDatos1 div {
         display: flex;
         justify-content: center; }
-  #fiat #fiat2 {
-    grid-area: fiat2; }
-    #fiat #fiat2:hover #fiatDatos2 {
+  #nissan #niss2 {
+    grid-area: niss2; }
+    #nissan #niss2:hover #nissDatos2 {
       display: grid;
       grid-template-rows: repeat(4, 1fr) 2fr;
-      grid-template-areas: "fiatModelo2" "fiatPrecio2" "fiatToTerr2" "fiatEnergia2" "fiatDesc2"; }
-      #fiat #fiat2:hover #fiatDatos2 div {
+      grid-template-areas: "nissModelo2" "nissPrecio2" "nissToTerr2" "nissEnergia2" "nissDesc2"; }
+      #nissan #niss2:hover #nissDatos2 div {
         display: flex;
         justify-content: center; }
-  #fiat #fiat3 {
-    grid-area: fiat3; }
-    #fiat #fiat3:hover #fiatDatos3 {
+  #nissan #niss3 {
+    grid-area: niss3; }
+    #nissan #niss3:hover #nissDatos3 {
       display: grid;
       grid-template-rows: repeat(4, 1fr) 2fr;
-      grid-template-areas: "fiatModelo3" "fiatPrecio3" "fiatToTerr3" "fiatEnergia3" "fiatDesc3"; }
-      #fiat #fiat3:hover #fiatDatos3 div {
+      grid-template-areas: "nissModelo3" "nissPrecio3" "nissToTerr3" "nissEnergia3" "nissDesc3"; }
+      #nissan #niss3:hover #nissDatos3 div {
         display: flex;
         justify-content: center; }
-  #fiat h2 {
+  #nissan h2 {
     margin: 0%;
     padding: 0%;
-    grid-area: titFiat;
+    grid-area: titNiss;
     text-align: center; }
-  #fiat img {
+  #nissan img {
     width: 100%; }
 
-#fiatImg1, #fiatImg2, #fiatImg3 {
+#nissImg1, #nissImg2, #nissImg3 {
   height: 0px; }
 
-#fiatDatos1, #fiatDatos2, #fiatDatos3 {
+#nissDatos1, #nissDatos2, #nissDatos3 {
   display: none;
   text-align: center;
   height: 100%;
   color: black; }
-  #fiatDatos1 h4, #fiatDatos2 h4, #fiatDatos3 h4 {
+  #nissDatos1 h4, #nissDatos2 h4, #nissDatos3 h4 {
     font-size: 40px;
     padding: 0%;
     margin: 0%; }
-  #fiatDatos1 p, #fiatDatos2 p, #fiatDatos3 p {
+  #nissDatos1 p, #nissDatos2 p, #nissDatos3 p {
     margin: 0%;
     padding: 0%;
     font-size: 20px; }
