--- a/css/main.css
+++ b/css/main.css
@@ -4,8 +4,8 @@
   padding: 0; }
 
 footer {
-  background-color: #333333;
-  /* Gris oscuro */
+  background-color: #2B2B2B;
+  /* Gris oscuro tirando a negro */
   margin-top: auto; }
 
 .footerContainer {
@@ -19,25 +19,25 @@ footer {
 .socialIcons a {
   text-decoration: none;
   padding: 10px;
-  background-color: #FFC107;
-  /* Amarillo brillante */
+  background-color: #D32F2F;
+  /* Rojo intenso */
   margin: 10px;
   border-radius: 50%; }
 
 .socialIcons a i {
   font-size: 2em;
-  color: #fff;
+  color: #ffffff;
   /* Blanco */
   opacity: 0.9; }
 
 /* Hover effect on social media icon */
 .socialIcons a:hover {
-  background-color: #FFEB3B;
-  /* Amarillo suave */
+  background-color: #FF6659;
+  /* Rojo suave */
   transition: 0.5s; }
 
 .socialIcons a:hover i {
-  color: #333333;
+  color: #2B2B2B;
   /* Gris oscuro */
   transition: 0.5s; }
 
@@ -50,8 +50,8 @@ footer {
   list-style-type: none; }
 
 .footerNav ul li a {
-  color: #FFC107;
-  /* Amarillo brillante */
+  color: #D32F2F;
+  /* Rojo intenso */
   margin: 20px;
   text-decoration: none;
   font-size: 1.3em;
@@ -60,12 +60,12 @@ footer {
 
 .footerNav ul li a:hover {
   opacity: 1;
-  color: #FFEB3B;
-  /* Amarillo suave en hover */ }
+  color: #FF6659;
+  /* Rojo suave en hover */ }
 
 .footerBottom {
-  background-color: #000000;
-  /* Negro */
+  background-color: #1A1A1A;
+  /* Gris casi negro */
   padding: 20px;
   text-align: center; }
 
@@ -79,8 +79,8 @@ footer {
   letter-spacing: 1px;
   font-weight: 400;
   margin: 0px 5px;
-  color: #FFC107;
-  /* Amarillo brillante */ }
+  color: #D32F2F;
+  /* Rojo intenso */ }
 
 @media (max-width: 700px) {
   .footerNav ul {
@@ -112,24 +112,22 @@ footer {
   padding: 0; }
 
 .login-button {
-  background-color: #FFC107;
-  /* Amarillo brillante */
+  background-color: #D32F2F;
+  /* Rojo intenso */
   color: #fff;
   font-size: 14px;
   padding: 8px 20px;
   border-radius: 50px;
   text-decoration: none;
-  transition: 0.3s background-color;
-  /* Corregido el formato de transición */ }
+  transition: 0.3s background-color; }
 
 .login-button:hover {
-  background-color: #FFEB3B;
-  /* Amarillo suave */ }
+  background-color: #FF6659;
+  /* Rojo suave */ }
 
 .navbar-toggler {
   border: none;
-  font-size: 1.25rem;
-  /* Corregido el formato de tamaño */ }
+  font-size: 1.25rem; }
 
 .navbar-toggler:focus,
 .btn-close:focus {
@@ -138,14 +136,13 @@ footer {
 
 .nav-link {
   color: #2f2e2e;
-  /* Puedes ajustar este color si lo deseas */
   font-weight: 500;
   position: relative; }
 
 .nav-link:hover,
 .nav-link:active {
-  color: #FFEB3B;
-  /* Azul marino */ }
+  color: #9b0000;
+  /* Rojo claro */ }
 
 @media (min-width: 991px) {
   .nav-link::before {
@@ -156,11 +153,10 @@ footer {
     transform: translateX(-50%);
     width: 0;
     height: 2px;
-    background-color: #FFC107;
-    /* Puedes ajustar esto si prefieres amarillo */
+    background-color: #9b0000;
+    /* Rojo intenso */
     visibility: hidden;
-    transition: 0.3s ease-in-out;
-    /* Corregido el formato de transición */ }
+    transition: 0.3s ease-in-out; }
   .nav-link:hover::before,
   .nav-link.active::before {
     width: 100%;
@@ -854,7 +850,7 @@ footer {
   background-color: rgba(0, 0, 0, 0.164);
   padding: 20px;
   border-radius: 8px;
-  border: solid 3px black;
+  border: solid 3px #9b0000;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   max-width: 600px;
   margin: 0 auto;
@@ -905,7 +901,7 @@ footer {
   /* También lo ponemos transparente */ }
 
 .form-group button {
-  background-color: #4CAF50;
+  background-color: #9b0000;
   color: white;
   border: none;
   padding: 10px 20px;
@@ -914,7 +910,7 @@ footer {
   border-radius: 4px; }
 
 .form-group button:hover {
-  background-color: #45a049; }
+  background-color: #9b0000; }
 
 /* Animación de deslizamiento */
 @keyframes slideIn {
@@ -924,6 +920,9 @@ footer {
   to {
     opacity: 1;
     transform: translateY(0); } }
+
+#h1va {
+  color: white; }
 
 * {
   margin: 0;
