--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,12 +1,10 @@
-*{
+* {
     margin: 0;
     padding: 0;
 }
 
-
-
 footer {
-    background-color: #333333; /* Gris oscuro */
+    background-color: #2B2B2B; /* Gris oscuro tirando a negro */
     margin-top: auto;
 }
 
@@ -23,25 +21,25 @@ footer {
 .socialIcons a {
     text-decoration: none;
     padding: 10px;
-    background-color: #FFC107; /* Amarillo brillante */
+    background-color: #D32F2F; /* Rojo intenso */
     margin: 10px;
     border-radius: 50%;
 }
 
 .socialIcons a i {
     font-size: 2em;
-    color: #fff; /* Blanco */
+    color: #ffffff; /* Blanco */
     opacity: 0.9;
 }
 
 /* Hover effect on social media icon */
 .socialIcons a:hover {
-    background-color: #FFEB3B; /* Amarillo suave */
+    background-color: #FF6659; /* Rojo suave */
     transition: 0.5s;
 }
 
 .socialIcons a:hover i {
-    color: #333333; /* Gris oscuro */
+    color: #2B2B2B; /* Gris oscuro */
     transition: 0.5s;
 }
 
@@ -56,7 +54,7 @@ footer {
 }
 
 .footerNav ul li a {
-    color: #FFC107; /* Amarillo brillante */
+    color: #D32F2F; /* Rojo intenso */
     margin: 20px;
     text-decoration: none;
     font-size: 1.3em;
@@ -66,11 +64,11 @@ footer {
 
 .footerNav ul li a:hover {
     opacity: 1;
-    color: #FFEB3B; /* Amarillo suave en hover */
+    color: #FF6659; /* Rojo suave en hover */
 }
 
 .footerBottom {
-    background-color: #000000; /* Negro */
+    background-color: #1A1A1A; /* Gris casi negro */
     padding: 20px;
     text-align: center;
 }
@@ -85,7 +83,7 @@ footer {
     letter-spacing: 1px;
     font-weight: 400;
     margin: 0px 5px;
-    color: #FFC107; /* Amarillo brillante */
+    color: #D32F2F; /* Rojo intenso */
 }
 
 @media (max-width: 700px) {
