--- a/scss/_ventaAutos.scss
+++ b/scss/_ventaAutos.scss
@@ -31,7 +31,7 @@
     background-color: rgba(0, 0, 0, 0.164);
     padding: 20px;
     border-radius: 8px;
-    border: solid 3px black;
+    border: solid 3px #9b0000;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     max-width: 600px;
     margin: 0 auto;
@@ -80,7 +80,7 @@
 }
 
 .form-group button {
-    background-color: #4CAF50;
+    background-color: #9b0000;
     color: white;
     border: none;
     padding: 10px 20px;
@@ -90,7 +90,7 @@
 }
 
 .form-group button:hover {
-    background-color: #45a049;
+    background-color: #9b0000;
 }
 
 /* Animación de deslizamiento */
@@ -103,4 +103,8 @@
         opacity: 1;
         transform: translateY(0);
     }
+}
+
+#h1va{
+    color: white;
 }
