--- a/scss/_autos.scss
+++ b/scss/_autos.scss
@@ -1,6 +1,12 @@
+/*---------AUTOS---------*/
+
 @mixin padding($top, $right, $bottom, $left){
     padding: $top $right $bottom $left;
 }
+
+$colores:(
+    bordeImg: black,
+);
 
 $areasGrid:(
     1: honda,
@@ -54,10 +60,14 @@ $areasNiss:(
 }
 
 #tieAut__Main{
+    @include padding(0%, 5%, 10px, 5%);
+    img{
+        border: 5px solid map-get($colores, bordeImg);
+        border-radius: 20px
+    }
 }
 
 #tieAut__Grid{
-    @include padding(0%, 5%, 0%, 5%);
     display: grid;
 
     grid-template-rows: repeat(7, 1fr);
@@ -458,6 +468,7 @@ $areasNiss:(
     margin-top: 20px;
     background-color: rgba(255, 255, 255, 0.582);
     @include padding(10px, 0, 10px, 0);
+    border-radius: 10px;
     input{
         width: 200px;
         font-size: 20px;
@@ -468,4 +479,16 @@ $areasNiss:(
             opacity: 0.8;
         }
     }
+}
+
+/*COLORES*/
+
+#tieAut__Main{
+    background: repeating-linear-gradient(
+        45deg,
+        rgb(100, 100, 100),
+        rgb(100, 100, 100) 25%,
+        rgb(115, 115, 115) 25%,
+        rgb(115, 115, 115) 50%
+    );
 }
